# kawa-library

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: roadmap.md
prototypes/: shared.css
scripts/: build-debug.ps1  dev.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ffmpeg/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
